motions and orders pandas

--- a/src/BERT model.ipynb
+++ b/src/BERT model.ipynb
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "26a14ee1",
    "metadata": {
     "scrolled": true
@@ -319,7 +319,7 @@
        "4  ORAL MOTION by Attorney Busey for continuance ...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "9656ba93",
    "metadata": {},
    "outputs": [],
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "60e0d9f8",
    "metadata": {},
    "outputs": [
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "a96d672d",
    "metadata": {},
    "outputs": [],
@@ -627,7 +627,7 @@
     "    train.to_csv('../data/motions_laws/train.csv', index=False)\n",
     "if not valid_file.is_file():\n",
     "    valid.to_csv('../data/motions_laws/valid.csv', index=False)\n",
-    "if not train_file.is_file():\n",
+    "if not test_file.is_file():\n",
     "    test.to_csv('../data/motions_laws/test.csv', index=False)"
    ]
   },
