trained a model on our annotations

--- a/src/motions and orders.ipynb
+++ b/src/motions and orders.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "80e9a216",
    "metadata": {},
@@ -340,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "5186b817",
    "metadata": {},
    "outputs": [
@@ -351,7 +358,7 @@
        "Name: description, dtype: object"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,6 +622,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "id": "c009bb3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/sz/386ymr1n0xb_y6v0d8nrj98c0000gn/T/ipykernel_4256/2148659257.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  motions['description'] = motions['description'].str.lower()\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "motions['description'] = motions['description'].str.lower()\n",
+    "sumjudge = motions.loc[motions['description'].str.contains('summary judgement')]\n",
+    "\n",
+    "\n",
+    "sumjudge.to_csv('../data/motions_laws/sumjudge.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "id": "4e2cdbea",
    "metadata": {
@@ -772,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "6cfe475f",
    "metadata": {
     "scrolled": true
@@ -782,7 +817,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\alanx\\AppData\\Local\\Temp\\ipykernel_11880\\3724176434.py:9: SettingWithCopyWarning: \n",
+      "/var/folders/sz/386ymr1n0xb_y6v0d8nrj98c0000gn/T/ipykernel_4256/3724176434.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -806,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "fcb2a9fa",
    "metadata": {},
    "outputs": [],
@@ -816,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "c01f45c3",
    "metadata": {
     "scrolled": true
@@ -828,7 +863,7 @@
        "174329"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "5a76bdd8",
    "metadata": {},
    "outputs": [],
@@ -850,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "id": "c2c88603",
    "metadata": {},
    "outputs": [
@@ -860,7 +895,7 @@
        "139999"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
    "id": "f6e3d060",
    "metadata": {},
    "outputs": [],
@@ -892,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 18,
    "id": "b5d88aca",
    "metadata": {},
    "outputs": [],
@@ -902,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 19,
    "id": "17c8d27e",
    "metadata": {},
    "outputs": [],
@@ -912,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 20,
    "id": "a8ad3ede",
    "metadata": {},
    "outputs": [],
