--- a/src/BERT model.ipynb
+++ b/src/BERT model.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "89f43590",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "6db15861",
    "metadata": {
     "scrolled": true
@@ -46,19 +46,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1496e49b",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PreTrainedTokenizerFast(name_or_path='distilbert-base-uncased', vocab_size=30522, model_max_len=512, is_fast=True, padding_side='right', truncation_side='right', special_tokens={'unk_token': '[UNK]', 'sep_token': '[SEP]', 'pad_token': '[PAD]', 'cls_token': '[CLS]', 'mask_token': '[MASK]'})"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tokenizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3c12195c",
    "metadata": {},
    "outputs": [],
@@ -68,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "90690882",
    "metadata": {},
    "outputs": [],
@@ -86,12 +97,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "41b477b2",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'input_ids': tensor([[  101,  4367,  2005,  9474,  2344,  2128,  5099, 11057,  2011, 16362,\n",
+       "         13748,  4204,   102,     0,     0,     0]]), 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0]])}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "output_dict\n",
     "#input_ids are our words encoded into numbers and #attention mask is just where 1's are our words and the 0's are padding "
@@ -99,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "05f73bb7",
    "metadata": {},
    "outputs": [],
@@ -109,27 +132,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ede9c9bc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10930"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "voc.get('yo')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "8fbb2cf0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30522"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(voc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "d41e4afe",
    "metadata": {},
    "outputs": [],
@@ -139,10 +184,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "37f0f183",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['[CLS]',\n",
+       " 'motion',\n",
+       " 'for',\n",
+       " 'protective',\n",
+       " 'order',\n",
+       " 're',\n",
+       " 'hip',\n",
+       " '##aa',\n",
+       " 'by',\n",
+       " 'defendants',\n",
+       " 'marvin',\n",
+       " 'powers',\n",
+       " '[SEP]',\n",
+       " '[PAD]',\n",
+       " '[PAD]',\n",
+       " '[PAD]']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "[inv_vocab[i] for i in output_dict['input_ids'].tolist()[0]] "
    ]
@@ -159,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "26a14ee1",
    "metadata": {
     "scrolled": true
@@ -186,6 +257,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>legacyid</th>\n",
+       "      <th>date</th>\n",
+       "      <th>number</th>\n",
        "      <th>description</th>\n",
        "      <th>target</th>\n",
        "    </tr>\n",
@@ -193,56 +267,71 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>MOTION by James M Vani to modify conditions of...</td>\n",
-       "      <td>Motion to Modify Conditions for Release</td>\n",
+       "      <td>IL-CDCT1:15CV01009</td>\n",
+       "      <td>05/26/2015</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>motion to dismiss for failure to state a claim...</td>\n",
+       "      <td>Motion to Dismiss</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>MOTION by James M Vani to modify conditions of...</td>\n",
-       "      <td>Motion to Modify Conditions for Release</td>\n",
+       "      <td>IL-CDCT1:15CV01013</td>\n",
+       "      <td>02/27/2015</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>motion to dismiss the counterclaim and rule 12...</td>\n",
+       "      <td>Motion to Dismiss</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>MOTION by James M Vani to modify conditions of...</td>\n",
-       "      <td>Motion to Modify Conditions for Release</td>\n",
+       "      <td>IL-CDCT1:15CV01023</td>\n",
+       "      <td>01/30/2015</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>motion to dismiss by defendants geronimo wind ...</td>\n",
+       "      <td>Motion to Dismiss</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>MOTION by James M Vani to modify conditions of...</td>\n",
-       "      <td>Motion to Modify Conditions for Release</td>\n",
+       "      <td>IL-CDCT1:15CV01023</td>\n",
+       "      <td>01/30/2015</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>motion to dismiss by defendant general service...</td>\n",
+       "      <td>Motion to Dismiss</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>MOTION by James M Vani to modify conditions of...</td>\n",
-       "      <td>Motion to Modify Conditions for Release</td>\n",
+       "      <td>IL-CDCT1:15CV01027</td>\n",
+       "      <td>03/19/2015</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>motion to dismiss by defendants city of fairbu...</td>\n",
+       "      <td>Motion to Dismiss</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                         description  \\\n",
-       "0  MOTION by James M Vani to modify conditions of...   \n",
-       "1  MOTION by James M Vani to modify conditions of...   \n",
-       "2  MOTION by James M Vani to modify conditions of...   \n",
-       "3  MOTION by James M Vani to modify conditions of...   \n",
-       "4  MOTION by James M Vani to modify conditions of...   \n",
+       "             legacyid        date  number  \\\n",
+       "0  IL-CDCT1:15CV01009  05/26/2015    22.0   \n",
+       "1  IL-CDCT1:15CV01013  02/27/2015    12.0   \n",
+       "2  IL-CDCT1:15CV01023  01/30/2015    14.0   \n",
+       "3  IL-CDCT1:15CV01023  01/30/2015    23.0   \n",
+       "4  IL-CDCT1:15CV01027  03/19/2015     8.0   \n",
        "\n",
-       "                                    target  \n",
-       "0  Motion to Modify Conditions for Release  \n",
-       "1  Motion to Modify Conditions for Release  \n",
-       "2  Motion to Modify Conditions for Release  \n",
-       "3  Motion to Modify Conditions for Release  \n",
-       "4  Motion to Modify Conditions for Release  "
+       "                                         description             target  \n",
+       "0  motion to dismiss for failure to state a claim...  Motion to Dismiss  \n",
+       "1  motion to dismiss the counterclaim and rule 12...  Motion to Dismiss  \n",
+       "2  motion to dismiss by defendants geronimo wind ...  Motion to Dismiss  \n",
+       "3  motion to dismiss by defendant general service...  Motion to Dismiss  \n",
+       "4  motion to dismiss by defendants city of fairbu...  Motion to Dismiss  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_df = pd.read_csv('../data/motions_laws/sergio_data.csv')\n",
+    "train_df = pd.read_csv('../data/motions_laws/balanced_set.csv')\n",
     "train_df.head()"
    ]
   },
@@ -269,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "0daedf1d",
    "metadata": {
     "scrolled": true
@@ -278,18 +367,18 @@
     {
      "data": {
       "text/plain": [
-       "count    3558.000000\n",
-       "mean       32.756324\n",
-       "std        30.217261\n",
+       "count    3030.000000\n",
+       "mean       32.359076\n",
+       "std        25.795596\n",
        "min         8.000000\n",
-       "25%        18.000000\n",
+       "25%        20.000000\n",
        "50%        26.000000\n",
-       "75%        34.000000\n",
-       "max       578.000000\n",
+       "75%        36.000000\n",
+       "max       377.000000\n",
        "Name: description, dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "8215433b",
    "metadata": {},
    "outputs": [
@@ -308,7 +397,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "29\n"
+      "3\n"
      ]
     }
    ],
@@ -320,46 +409,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "13061be4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "No Motion Here                                      1237\n",
-       "Other Motion Not Listed Here                         646\n",
-       "Motion for Extension                                 484\n",
-       "Motion for Leave                                     206\n",
-       "Motion to Dismiss                                    173\n",
-       "Motion to Withdraw                                   156\n",
-       "Motion to Compel                                      77\n",
-       "Motion for a Protective Order                         70\n",
-       "Motion for Summary Judgment                           68\n",
-       "Motion for Default Judgment                           61\n",
-       "Motion to Strike                                      51\n",
-       "Motion to Continue                                    48\n",
-       "Motion in Limine                                      46\n",
-       "Motion to Amend                                       44\n",
-       "Motion for Attorney Representation                    39\n",
-       "Motion to Substitute                                  38\n",
-       "Motion for Order                                      24\n",
-       "Motion to Exclude                                     24\n",
-       "Motion to File Under Seal                             18\n",
-       "Motion to Quash                                       13\n",
-       "Motion to Modify Conditions for Release                9\n",
-       "Motion for Judgment (as a Matter of Law)               7\n",
-       "Motion to Transfer a Case                              6\n",
-       "Motion to Suppress                                     4\n",
-       "Motion to Transfer a Prisoner                          4\n",
-       "Motion to Unseal                                       2\n",
-       "Motion Requesting Early Termination of Probation       1\n",
-       "Motion for Voluntary Dismissal                         1\n",
-       "Motion for Removal in Custody                          1\n",
+       "Motion to Dismiss               1151\n",
+       "Other                           1062\n",
+       "Motion for Summary Judgement     817\n",
        "Name: target, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,9 +452,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2846, 2)\n",
-      "(356, 2)\n",
-      "(356, 2)\n"
+      "(2424, 5)\n",
+      "(303, 5)\n",
+      "(303, 5)\n"
      ]
     }
    ],
@@ -422,19 +485,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "badc6d93",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "length of TRAIN set: 2846\n",
-      "length of VALID set: 356\n",
-      "length of TEST set: 356\n"
+     "ename": "NameError",
+     "evalue": "name 'MODEL_NAME' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/sz/386ymr1n0xb_y6v0d8nrj98c0000gn/T/ipykernel_35389/674645798.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mlabels\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'target'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mmax_seq_length\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mSEQ_LENGTH\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mmodel_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mMODEL_NAME\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m )\n\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'length of TRAIN set:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_dataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'MODEL_NAME' is not defined"
      ]
     }
    ],
@@ -1123,7 +1188,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\r",
+      "\r\n",
       "1/1 * Epoch (train):   0% 0/178 [00:00<?, ?it/s]"
      ]
     },
